<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android Calc</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="edit_message">Input Calculation</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="clear">C</string>
    <string name="space">S</string>
    <string name="decimal">.</string>
    <string name="calculate">=</string>
    
    
</resources>
