<RelativeLayout >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
    
    <EditText android:id="@+id/edit_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:inputType="numberDecimal"
        android:hint="@string/edit_message"
        />
    
    <Button android:id="@+id/multiply"
        android:layout_width="wrap_content"
        
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_message"
        android:layout_centerHorizontal="true"
        android:text="@string/multiply"
        />

    <Button android:id="@+id/subtract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_message"
        android:layout_toLeftOf="@id/multiply"
        android:text="@string/subtract"
        />
        
    <Button android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_message"
        android:layout_toLeftOf="@id/subtract"
        android:text="@string/add"
        />
    
	<Button android:id="@+id/divide"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/edit_message"
	    android:layout_toRightOf="@id/multiply"
	    android:text="@string/divide"
	    />
	
	
	<Button android:id="@+id/clear"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/multiply"
	    android:layout_centerHorizontal="true"
	    android:text="@string/clear"
	    />
	
	
	<Button android:id="@+id/space"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/add"
	    android:layout_toLeftOf="@id/clear"
	    android:layout_alignStart="@id/add"
	    android:layout_alignEnd="@id/subtract"
	    android:text="@string/space"
	    />
    
	<Button android:id="@+id/decimal"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/divide"
	    android:layout_toRightOf="@id/clear"
	    android:text="@string/decimal"
	    />

	<Button android:id="@+id/equals"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_toRightOf="@id/divide"
	       <Button android:id="@+id/button7" android:layout_width="wra